--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,6 @@ jobs:
       - run:
           name: Print the Current Time
           command: echo $CIRCLE_TAG
+      - run:
+          name: execute script
+          command: ./scripts/demo.sh
