--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Version information
-          command: rustc --version; cargo --version; rustup --versionj
+          command: rustc --version; cargo --version; rustup --version
       - run:
           name: Print the Current Time
           command: echo $CIRCLE_TAG
